--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,8 +1,3 @@
-.fixed{
-    position: relative;
-}
-
-
 .nav{
     width: 85%;
     height: 60px;
@@ -19,6 +14,7 @@
     justify-content: space-around;
     /* border: 1px solid green; */
     padding-top: 1%;
+    color: black;
 }
 .nav>div:nth-child(2){
     width: 30%;
@@ -56,11 +52,12 @@
     opacity: 80%;
 }
 .start_btn+div>img{
-    width: 140%;
+    width: 160%;
     height: 140%;
-   margin-top: -30%;
+   margin-top: -33%;
+   margin-left: 40%;
 }
-.nav+div{
+/* .nav+div{
     background-color: black;
     color: white;
     height: 40px;
@@ -73,4 +70,7 @@
 .nav+div:hover{
    cursor: pointer;
    opacity: 80%;
+} */
+.text{
+    color: black; 
 }
