--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -43,11 +43,12 @@
     color: white;
     height: 55px;
     opacity: 85%;
+    margin-top: 100px;
 }
 .img1+div+div>p{
     padding-top: 1%;
     font-weight: 400;
-    margin-left: -11%;
+    margin-left: -9%;
     font-size: 16px;
 }
 .left-align{
